--- a/app/src/main/res/layout/account_tab.xml
+++ b/app/src/main/res/layout/account_tab.xml
@@ -52,23 +52,18 @@ tools:context=".AccountFragment">
                     android:textSize="30sp" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/currency_balance_units"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/bits_unit"
-                        android:textSize="10sp" />
 
                     <TextView
                         android:id="@+id/currency_balance"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="-.--"
+                        android:gravity="center"
+                        android:text="@string/balance_empty"
                         android:textSize="10sp"/>
 
                 </LinearLayout>
