--- a/app/src/main/res/layout/settings_tab.xml
+++ b/app/src/main/res/layout/settings_tab.xml
@@ -8,140 +8,226 @@
     android:background="@color/PayPro_Background"
     tools:context=".SettingsFragment">
 
-    <TableLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="30dp">
+        android:background="@color/PayPro_Background"
+        android:overScrollMode="always"
+        android:scrollbarAlwaysDrawVerticalTrack="false">
 
-        <TableRow
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/PayPro_Line"
-            android:minHeight="0.5dp" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:background="@android:color/background_light"
-            android:minHeight="76dp">
-
-            <ImageView
-                android:id="@+id/avatarImage"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:layout_margin="10dp" />
-
-            <TextView
-                android:id="@+id/textView3"
+            <TableRow
                 android:layout_width="match_parent"
-                android:height="76dp"
-                android:gravity="center_vertical|right"
-                android:text="John Aplessed" />
+                android:layout_height="match_parent"
+                android:background="@color/PayPro_Line"
+                android:minHeight="0.5dp" />
 
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/PayPro_Line"
-            android:minHeight="0.5dp" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/PayPro_Line"
-            android:minHeight="0.5dp"
-            android:layout_marginTop="30dp"/>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:background="@android:color/background_light"
-            android:minHeight="44dp">
-
-            <ImageView
-                android:id="@+id/passcodeImage"
-                android:layout_width="29dp"
-                android:layout_height="29dp"
-                android:layout_marginTop="7.5dp"
-                android:cropToPadding="false"
-                android:src="@mipmap/settings_passcode" />
-
-            <TextView
-                android:id="@+id/passcodeText"
+            <TableRow
+                android:id="@+id/rowProfile"
                 android:layout_width="match_parent"
-                android:height="44dp"
-                android:gravity="center_vertical|left"
-                android:text="Passcode" />
-        </TableRow>
+                android:background="@android:color/background_light"
+                android:minHeight="76dp">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/PayPro_Line"
-            android:minHeight="0.5dp" />
+                <ImageView
+                    android:id="@+id/avatarImage"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_margin="10dp"
+                    android:contentDescription="@string/todo" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/PayPro_Line"
-            android:minHeight="0.5dp"
-            android:layout_marginTop="30dp"/>
+                <TextView
+                    android:id="@+id/textView3"
+                    android:height="76dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/nickname" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:background="@android:color/background_light"
-            android:minHeight="44dp">
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1">
 
-            <ImageView
-                android:id="@+id/tellImage"
-                android:layout_width="29dp"
-                android:layout_height="29dp"
-                android:layout_marginTop="7.5dp"
-                android:cropToPadding="false"
-                android:src="@mipmap/settings_tell_a_friend" />
+                    <ImageView
+                        android:id="@+id/avatarArrow"
+                        android:layout_width="8dp"
+                        android:layout_height="13dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"
+                        android:contentDescription="@string/todo"
+                        android:src="@mipmap/arrow_right" />
+                </RelativeLayout>
 
-            <TextView
-                android:id="@+id/tellText"
+            </TableRow>
+
+            <TableRow
                 android:layout_width="match_parent"
-                android:height="44dp"
-                android:gravity="center_vertical|left"
-                android:text="Tell a friend" />
-        </TableRow>
+                android:layout_height="match_parent"
+                android:background="@color/PayPro_Line"
+                android:minHeight="0.5dp" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/PayPro_Line"
-            android:minHeight="0.5dp" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:background="@android:color/background_light"
-            android:minHeight="44dp">
-
-            <ImageView
-                android:id="@+id/infoImage"
-                android:layout_width="29dp"
-                android:layout_height="29dp"
-                android:layout_marginTop="7.5dp"
-                android:cropToPadding="false"
-                android:src="@mipmap/settings_info" />
-
-            <TextView
-                android:id="@+id/infoText"
+            <TableRow
                 android:layout_width="match_parent"
-                android:height="44dp"
-                android:gravity="center_vertical|left"
-                android:text="Info" />
-        </TableRow>
+                android:layout_height="match_parent"
+                android:layout_marginTop="30dp"
+                android:background="@color/PayPro_Line"
+                android:minHeight="0.5dp" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/PayPro_Line"
-            android:minHeight="0.5dp" />
+            <TableRow
+                android:id="@+id/rowPasscode"
+                android:layout_width="match_parent"
+                android:background="@android:color/background_light"
+                android:minHeight="44dp">
 
-    </TableLayout>
+                <ImageView
+                    android:id="@+id/passcodeImage"
+                    android:layout_width="29dp"
+                    android:layout_height="29dp"
+                    android:layout_marginTop="7.5dp"
+                    android:contentDescription="@string/todo"
+                    android:cropToPadding="false"
+                    android:src="@mipmap/settings_passcode" />
+
+                <TextView
+                    android:id="@+id/passcodeText"
+                    android:layout_width="match_parent"
+                    android:height="44dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/passcode" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/passcodeArrow"
+                        android:layout_width="8dp"
+                        android:layout_height="13dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"
+                        android:contentDescription="@string/todo"
+                        android:src="@mipmap/arrow_right" />
+                </RelativeLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/PayPro_Line"
+                android:minHeight="0.5dp" />
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="30dp"
+                android:background="@color/PayPro_Line"
+                android:minHeight="0.5dp" />
+
+            <TableRow
+                android:id="@+id/rowTell"
+                android:layout_width="match_parent"
+                android:background="@android:color/background_light"
+                android:minHeight="44dp">
+
+                <ImageView
+                    android:id="@+id/tellImage"
+                    android:layout_width="29dp"
+                    android:layout_height="29dp"
+                    android:layout_marginTop="7.5dp"
+                    android:contentDescription="@string/todo"
+                    android:cropToPadding="false"
+                    android:src="@mipmap/settings_tell_a_friend" />
+
+                <TextView
+                    android:id="@+id/tellText"
+                    android:layout_width="match_parent"
+                    android:height="44dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/tell_a_friend" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/tellArrow"
+                        android:layout_width="8dp"
+                        android:layout_height="13dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"
+                        android:contentDescription="@string/todo"
+                        android:src="@mipmap/arrow_right" />
+                </RelativeLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/PayPro_Line"
+                android:minHeight="0.5dp" />
+
+            <TableRow
+                android:id="@+id/rowInfo"
+                android:layout_width="match_parent"
+                android:background="@android:color/background_light"
+                android:minHeight="44dp">
+
+                <ImageView
+                    android:id="@+id/infoImage"
+                    android:layout_width="29dp"
+                    android:layout_height="29dp"
+                    android:layout_marginTop="7.5dp"
+                    android:contentDescription="@string/todo"
+                    android:cropToPadding="false"
+                    android:src="@mipmap/settings_info" />
+
+                <TextView
+                    android:id="@+id/infoText"
+                    android:layout_width="match_parent"
+                    android:height="44dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/info" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/infoArrow"
+                        android:layout_width="8dp"
+                        android:layout_height="13dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"
+                        android:contentDescription="@string/todo"
+                        android:src="@mipmap/arrow_right" />
+                </RelativeLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/PayPro_Line"
+                android:minHeight="0.5dp" />
+
+        </TableLayout>
+
+    </ScrollView>
+
 </RelativeLayout>
