--- a/app/src/main/res/layout/contacts_list_item.xml
+++ b/app/src/main/res/layout/contacts_list_item.xml
@@ -2,13 +2,14 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:background="@color/pp_purple">
+    android:layout_height="60dp"
+    android:layout_marginTop="10dp"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/contact_photo"
-        android:layout_width="match_parent"
+        android:layout_width="120dp"
+        android:padding="10dp"
         android:layout_height="match_parent"
         android:layout_weight="1"/>
 
@@ -17,6 +18,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:textSize="20sp"
+        android:text="John Smith"
+        android:textColor="@android:color/black"
+        android:paddingLeft="12dp"
+        android:gravity="center_vertical"
         android:clickable="true" />
 </LinearLayout>
 
