--- a/app/src/main/res/layout/scan_tab.xml
+++ b/app/src/main/res/layout/scan_tab.xml
@@ -7,10 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".ScanFragment">
 
-    <SurfaceView
-        android:id="@+id/camera_view"
+    <app.paypro.payproapp.ui.camera.CameraSourcePreview
+        android:id="@+id/preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true" />
+        android:layout_height=  "match_parent"
+        android:layout_centerVertical="true" >
+
+        <app.paypro.payproapp.ui.camera.GraphicOverlay
+            android:id="@+id/graphicOverlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </app.paypro.payproapp.ui.camera.CameraSourcePreview>
 
 </RelativeLayout>
