--- a/app/src/main/res/layout/sendmoney_send_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_send_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -27,6 +28,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/main_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize"
@@ -36,90 +38,112 @@
             android:id="@+id/ready_to_send_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="25dp"
             android:paddingBottom="10dp"
             android:paddingLeft="17dp"
-            android:text="@string/ready_to_send"/>
+            android:paddingTop="25dp"
+            android:text="@string/ready_to_send" />
 
         <TextView
             android:id="@+id/ready_to_send_text"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:textSize="25sp"
+            android:background="@android:color/white"
             android:gravity="center_vertical"
             android:paddingLeft="17dp"
             android:paddingStart="17dp"
-            android:background="@android:color/white"
+            android:textSize="25sp"
             app:layout_constraintTop_toBottomOf="@id/ready_to_send_label" />
 
         <TextView
             android:id="@+id/to_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="25dp"
             android:paddingBottom="10dp"
             android:paddingLeft="17dp"
+            android:paddingTop="25dp"
             android:text="@string/to"
-            app:layout_constraintTop_toBottomOf="@id/ready_to_send_text"/>
+            app:layout_constraintTop_toBottomOf="@id/ready_to_send_text" />
 
         <LinearLayout
             android:id="@+id/to_text"
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:background="@android:color/white"
             android:orientation="vertical"
-            android:paddingTop="5dp"
             android:paddingLeft="17dp"
             android:paddingStart="17dp"
-            app:layout_constraintTop_toBottomOf="@id/to_label"
-            android:background="@android:color/white">
+            android:paddingTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/to_label">
 
             <TextView
                 android:id="@+id/to_text_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                app:layout_constraintTop_toBottomOf="@id/to_label"/>
+                app:layout_constraintTop_toBottomOf="@id/to_label" />
 
             <TextView
                 android:id="@+id/to_text_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                app:layout_constraintTop_toBottomOf="@id/to_text_1"/>
+                app:layout_constraintTop_toBottomOf="@id/to_text_1" />
 
             <TextView
                 android:id="@+id/to_text_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                app:layout_constraintTop_toBottomOf="@id/to_text_2"/>
+                app:layout_constraintTop_toBottomOf="@id/to_text_2" />
 
             <TextView
                 android:id="@+id/to_text_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                app:layout_constraintTop_toBottomOf="@id/to_text_3"/>
+                app:layout_constraintTop_toBottomOf="@id/to_text_3" />
 
         </LinearLayout>
 
 
-
         <LinearLayout
+            android:id="@+id/activity_indicator"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:visibility="invisible"
+            android:gravity="center_vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/to_text"
+            app:layout_constraintBottom_toTopOf="@id/swipe_btn_layout"
+            app:layout_constraintVertical_bias="0.5">
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:indeterminate="true"
+                android:indeterminateDrawable="@drawable/custom_progress_loader_black" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/swipe_btn_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginRight="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:gravity="center_vertical">
+            app:layout_constraintTop_toBottomOf="@id/activity_indicator">
 
             <app.paypro.payproapp.ui.button.swipe.SwipeButton
                 android:id="@+id/swipe_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:layout_marginEnd="40dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
                 app:button_background="@drawable/shape_swipe_button"
                 app:button_image_height="60dp"
                 app:initial_state="disabled"
