--- a/app/src/main/res/layout/account_tab.xml
+++ b/app/src/main/res/layout/account_tab.xml
@@ -8,90 +8,99 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".AccountFragment">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/topPanel"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="217dp"
-        android:elevation="2dp"
-        android:background="@drawable/gradient">
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <LinearLayout
-            android:id="@+id/currency_layout"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/topPanel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tabs">
-
-            <TextView
-                android:id="@+id/currency_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/bits"
-                android:textColor="@android:color/white"
-                android:textSize="40sp" />
+            android:layout_height="217dp"
+            android:elevation="2dp"
+            android:background="@drawable/gradient">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:id="@+id/currency_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:gravity="center"
-                android:orientation="horizontal">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/tabs">
+
+                <TextView
+                    android:id="@+id/currency_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/bits"
+                    android:textColor="@android:color/white"
+                    android:textSize="40sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="7dp"
-                    android:gravity="center">
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-                    <ImageView
-                        android:layout_width="10dp"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_marginBottom="3dp"
+                        android:layout_marginRight="7dp"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:layout_width="10dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="3dp"
+                            app:srcCompat="@drawable/ic_greek_letter_mu_serif_sans" />
+
+
+                        <ImageView
+                            android:layout_width="13dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="2dp"
+                            app:srcCompat="@drawable/ic_btc_sans" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/currency_balance"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="3dp"
-                        app:srcCompat="@drawable/ic_greek_letter_mu_serif_sans" />
+                        android:gravity="center"
+                        android:text="@string/balance_empty"
+                        android:textColor="@android:color/white"
+                        android:textSize="25sp" />
 
-
-                    <ImageView
-                        android:layout_width="13dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="2dp"
-                        app:srcCompat="@drawable/ic_btc_sans" />
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/currency_balance"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/balance_empty"
-                    android:textColor="@android:color/white"
-                    android:textSize="25sp" />
-
-
             </LinearLayout>
 
-        </LinearLayout>
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                app:tabContentStart="72dp"
+                app:tabIndicatorColor="@android:color/white"
+                app:tabMode="scrollable"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            app:tabSelectedTextColor="@android:color/white"
-            app:tabIndicatorColor="@android:color/white"
-            app:tabTextColor="@android:color/white"
-            app:tabPaddingStart="72dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+        </android.support.constraint.ConstraintLayout>
 
-    </android.support.constraint.ConstraintLayout>
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/topPanel"
+        app:layout_constraintTop_toBottomOf="@id/appbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
